# adk-toolkit-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PROGRESS.md  README.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  TOOL_CATALOG.md
docs/adk-api-notes/: a2a-mcp-bridge.md  agents.md  conventions.md  deploy-dev.md  eval.md  fastmcp-codemode.md  memory-artifacts.md  models.md  planners.md  project.md  runtime-run.md  safety-observability.md  sessions.md  skills.md  tools.md  workflow.md
examples/: 01_hello_agent.py  02_multi_agent.py  03_eval.py  README.md
skill/: SKILL.md
skill/references/: 00-mental-model.md  01-agent-types.md  02-tools.md  03-models.md  04-sessions-state.md  05-memory-artifacts.md  06-runtime.md  07-eval.md  08-deploy.md  09-a2a.md  10-observability.md  11-safety.md  12-troubleshooting.md  13-tool-catalog.md
src/adk_toolkit_mcp/: __init__.py  adk_cli.py  deps.py  envelope.py  project_model.py  prompts.py  resources.py  run_core.py  runtime.py  server.py  versions.py  workspace.py
src/adk_toolkit_mcp/domains/: __init__.py  a2a.py  agents.py  artifacts.py  deploy.py  dev.py  eval.py  mcp_bridge.py  memory.py  models.py  observability.py  observability_setup.py  project.py  run.py  safety.py  safety_plugins.py  sessions.py  skills.py  tools.py  workflow.py
src/adk_toolkit_mcp/project_model/: __init__.py  _codegen.py  _workflow_codegen.py  render.py  sidecar.py  specs.py
tests/: conftest.py
tests/integration/: test_e2e_kimi.py
tests/unit/: fake_llm.py  test_a2a.py  test_adk_cli.py  test_agents.py  test_artifacts.py  test_deploy.py  test_deps.py  test_dev.py  test_envelope.py  test_eval.py  test_mcp_bridge.py  test_memory.py  test_models.py  test_observability.py  test_project.py  test_project_model.py  test_prompts.py  test_resources.py  test_run.py  test_run_core.py  test_runtime.py  test_safety.py  test_server.py  test_sessions.py  test_skill.py  test_skills.py  test_tools.py  test_versions.py  test_workflow.py  test_workspace.py
