[project]
name = "adk-toolkit-mcp"
version = "0.1.0"
description = "Exhaustive MCP server wrapping Google ADK (Agent Development Kit)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastmcp>=3.3.1",
    "google-adk>=2.0,<3",
    "pydantic>=2.7",
]

[project.optional-dependencies]
litellm = ["litellm>=1.40"]
gcp = ["google-adk[gcp]>=2.0,<3"]
bigquery = ["google-adk[bigquery]>=2.0,<3"]
spanner = ["google-adk[spanner]>=2.0,<3"]
a2a = ["google-adk[a2a]>=2.0,<3"]
eval = ["google-adk[eval]>=2.0,<3"]
mcp = ["google-adk[mcp]>=2.0,<3"]
community = ["google-adk[community]>=2.0,<3"]
# `db` enables DatabaseSessionService (and other SQL-backed services) via SQLAlchemy.
db = ["sqlalchemy>=2.0"]
all = ["adk-toolkit-mcp[litellm,gcp,bigquery,spanner,a2a,eval,mcp,community,db]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    # DatabaseSessionService needs SQLAlchemy; install in CI so persistence tests run.
    "sqlalchemy>=2.0",
    # `eval` extra (rouge-score/pandas/tabulate) so the offline eval pipeline is testable in CI.
    "adk-toolkit-mcp[eval]",
]

[project.scripts]
adk-toolkit-mcp = "adk_toolkit_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_toolkit_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: live end-to-end tests requiring real credentials (skipped without them)",
]

[tool.coverage.run]
source = ["adk_toolkit_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
